--- a/style.css
+++ b/style.css
@@ -107,10 +107,10 @@ a:hover {
     .prose a {
       display: inline-block;
       padding: 10px 20px;
-      background-color: #3498db;
+      background-color: transparent;
       color: white;
       text-decoration: none;
-      border-radius: 5px;
+      border-radius: 50px;
       transition: background-color 0.3s ease;
     }
 
