--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ a:hover {
       bottom: 20px;
       left: 50%;
       transform: translateX(-50%);
-      text-align: center;
+      text-align: left;
       color: white;
     }
 
