--- a/style.css
+++ b/style.css
@@ -86,9 +86,9 @@ a:hover {
     }
 
     .prose {
-      position: absolute;
+      position: left;
       bottom: 20px;
-      left: 50%;
+      left: 100%;
       transform: translateX(-50%);
       text-align: left;
       color: white;
