--- a/style.css
+++ b/style.css
@@ -107,10 +107,11 @@ a:hover {
     .prose a {
       display: inline-block;
       padding: 10px 20px;
-      background-color: blue;
+      background-color: transparent;
+      border: 5px solid white;
       color: white;
       text-decoration: line;
-      border-radius: 5px;
+      border-radius: 20px;
       transition: background-color 0.3s ease;
     }
 
