--- a/style.css
+++ b/style.css
@@ -108,10 +108,10 @@ a:hover {
       display: inline-block;
       padding: 10px 20px;
       background-color: transparent;
-      border: 5px solid white;
+      border: 3px solid white;
       color: white;
-      text-decoration: line;
-      border-radius: 20px;
+      text-decoration: none;
+      border-radius: 50px;
       transition: background-color 0.3s ease;
     }
 
