--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ a:hover {
     }
 
     .slide {
-      display: none;
+      display: right;
     }
 
     .slide img {
@@ -88,7 +88,7 @@ a:hover {
     .prose {
       position: absolute;
       bottom: 20px;
-      left: 50%;
+      left: 5%;
       transform: translateX(-50%);
       text-align: center;
       color: white;
