--- a/style.css
+++ b/style.css
@@ -88,9 +88,9 @@ a:hover {
     .prose {
       position: absolute;
       bottom: 20px;
-      left: 5%;
+      left: 15%;
       transform: translateX(-50%);
-      text-align: center;
+      text-align: left;
       color: white;
     }
 
