--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 
 /* Header styles */
 header {
+  position: sticky;
   background-color: #007bff;
   color: #fff;
   padding: 20px;
@@ -87,9 +88,8 @@ a:hover {
 
     .prose {
       position: absolute;
-      bottom: 20px;
-      left: 15%;
-      transform: translateX(-50%);
+      bottom: 15px;
+      left: 5%;
       text-align: left;
       color: white;
     }
