--- a/style.css
+++ b/style.css
@@ -127,3 +127,7 @@ a:hover {
     .prose a:hover {
       background-color: #2980b9;
     }
+    iframe {
+      border: 3px solid limegreen;
+      border-radius: 10px;
+    }
