--- a/style.css
+++ b/style.css
@@ -154,9 +154,9 @@ a:hover {
 }
 .floating-video {
   position: fixed;
-  bottom: 20px;
+  bottom: 50px;
   right: 20px;
-  z-index: 999;
+  z-index: 9999;
 }
 .tie h1 {
   color: blue;
@@ -203,4 +203,44 @@ a#Redirect {
 }
 a#Redirect:hover {
   text-decoration: underline black;
+}
+table {
+  border-collapse: collapse;
+  border: 2px solid rgb(140 140 140);
+  font-family: sans-serif;
+  font-size: 0.8rem;
+  letter-spacing: 1px;
+}
+
+caption {
+  caption-side: bottom;
+  padding: 10px;
+  font-weight: bold;
+}
+
+thead,
+tfoot {
+  background-color: rgb(228 240 245);
+}
+
+th,
+td {
+  border: 1px solid rgb(160 160 160);
+  padding: 8px 10px;
+}
+
+td:last-of-type {
+  text-align: center;
+}
+
+tbody > tr:nth-of-type(even) {
+  background-color: rgb(237 238 242);
+}
+
+tfoot th {
+  text-align: right;
+}
+
+tfoot td {
+  font-weight: bold;
 }
