--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 /* Body styles */
 body {
   font-family: sans-serif;
-  background-color: #3F182C;
+  background-color: midnightblue;
   color: white;
   line-height: 1.6;
   margin: 0;
@@ -20,16 +20,11 @@ body {
 
 /* Header styles */
 header {
-  position: sticky;
-  background-image: linear-gradient(to 
-  bottom, darkblue, #3F185C);
+  background-color: black;
   color: white;
-  padding: 20px;
   text-align: center;
-  border: 3px solid black;
-  margin-right: auto;
-    margin-left: auto;
-    width: auto;
+  border-bottom: 3px solid white;
+  border-top: 3px solid white;
   border-radius: 10px;
 }
 
@@ -54,7 +49,7 @@ nav ul li {
 }
 
 nav ul li a {
-  color: #fff;
+  color: white;
   text-decoration: none;
 }
 
@@ -64,13 +59,13 @@ main {
 }
 
 section {
-  background-color: #3F183D;
+  background-color: black;
   color: white;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
   margin-bottom: 20px;
-  border: 2px solid forestgreen;
+  border: 2px solid white;
 }
 
 section h2 {
@@ -81,7 +76,7 @@ section h2 {
 /* Links */
 a {
   color: royalblue;
-  text-decoration: none;
+  text-decoration: underline blue;
 }
 
 a:hover {
@@ -135,17 +130,17 @@ a:hover {
     }
 
     .prose a:hover {
-      background-color: #2980b9;
+      background-color: black;
     }
     iframe {
-      border: 3px solid limegreen;
+      border: 3px solid blue;
       border-radius: 10px;
     }
     .tie {
       margin-right: auto;
     margin-left: auto;
     }
-    img#tie {
+    imgblacktie {
   max-width: 300px;
   max-height: 350px;
   border: 3px solid black;
@@ -154,7 +149,7 @@ a:hover {
 }
 .floating-video {
   position: fixed;
-  bottom: 50px;
+  bottom: 160px;
   right: 20px;
   z-index: 9999;
 }
@@ -175,38 +170,38 @@ a:hover {
   border-radius: 50px;
   text-decoration: bold;
 }
-section#about {
-  background-color: #3F185C;
+sectionblackabout {
+  background-color: darkslategray;
 }
-section#uptitle {
-  color: darkblue;
+sectionblackuptitle {
+  color: red;
 }
-img#team {
+imgblackteam {
   max-width: 75px;
   max-height: 75px;
-  border: 3px solid black;
+  border: 3px solid white;
   border-radius: 10px;
   text-align: center;
 }
 .story h1 {
-  border-bottom: 3px solid black;
+  border-bottom: 3px solid white;
   margin-right: auto;
     margin-left: auto;
     width: auto;
 }
 .story b {
-  text-decoration: underline yellow;
+  text-decoration: underline blue;
 }
-a#Redirect {
+ablackRedirect {
   color: white;
   font: italic "Shadded South" Fantasy;
 }
-a#Redirect:hover {
-  text-decoration: underline black;
+ablackRedirect:hover {
+  text-decoration: underline white;
 }
 table {
   border-collapse: collapse;
-  border: 2px solid forestgreen;
+  border: 2px solid blue;
   font-family: sans-serif;
   font-size: 0.8rem;
   letter-spacing: 1px;
@@ -220,7 +215,7 @@ caption {
 
 thead,
 tfoot {
-  background-color: #3F186C;
+  background-color: black;
 }
 
 th,
@@ -234,7 +229,7 @@ td:last-of-type {
 }
 
 tbody > tr:nth-of-type(even) {
-  background-color: #3F187C;
+  background-color: black;
 }
 
 tfoot th {
@@ -244,3 +239,8 @@ tfoot th {
 tfoot td {
   font-weight: bold;
   }
+  
+#kkpng {
+    width: auto;
+    height: 50px;
+}
